add some projects images, delete the logo from english section, fix mystic project designer name

--- a/project-rassekh.html
+++ b/project-rassekh.html
@@ -63,57 +63,73 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/rassek/_MG_3947%202.jpg" class="img-fluid" alt="تصميم راسخ 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 1</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/rassek/_MG_3967.jpg" class="img-fluid" alt="تصميم راسخ 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 2</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/rassek/_MG_4087.jpg" class="img-fluid" alt="تصميم راسخ 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 3</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/rassek/_MG_4152.jpg" class="img-fluid" alt="تصميم راسخ 4">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 4</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/rassek/Shared%20from%20Lightroom%20mobile%2012.jpg" class="img-fluid" alt="تصميم راسخ 5">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 5</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/rassek/Shared%20from%20Lightroom%20mobile%203.jpg" class="img-fluid" alt="تصميم راسخ 6">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 6</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/rassek/Shared%20from%20Lightroom%20mobile%204.jpg" class="img-fluid" alt="تصميم راسخ 7">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 7</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tiny-slide">
+                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/rassek/Shared%20from%20Lightroom%20mobile%205.jpg" class="img-fluid" alt="تصميم راسخ 8">
+                                    <div class="content">
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 8</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tiny-slide">
+                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/rassek/Shared%20from%20Lightroom%20mobile%206.jpg" class="img-fluid" alt="تصميم راسخ 9">
+                                    <div class="content">
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 9</a>
                                     </div>
                                 </div>
                             </div>
