--- a/project-mystic-circus.html
+++ b/project-mystic-circus.html
@@ -151,6 +151,15 @@
                         <div class="title-heading text-center">
                             <h4 class="mb-4">معلومات التواصل</h4>
                             <p class="text-muted">للتعاون أو الاستفسار حول مشروع Mystic Circus يرجى التواصل عبر الحساب التالي.</p>
+                             <div class="d-flex contact-detail align-items-center mt-4 justify-content-center">
+                                <div class="icon">
+                                    <i class="uil uil-user-circle fea icon-m-md text-dark me-3"></i>
+                                </div>
+                                <div class="flex-1 content text-start">
+                                    <h6 class="title fw-bold mb-0">اسم المصممة</h6>
+                                    <span class="text-primary">ريم محمد الحبيب</span>
+                                </div>
+                            </div>
                             <div class="d-flex contact-detail align-items-center mt-4 justify-content-center">
                                 <div class="icon">
                                     <i class="uil uil-instagram fea icon-m-md text-dark me-3"></i>
