add sigfah images, add navigation arrows

--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
                 </div><!--end row-->
 
                 <div class="row justify-content-center">
-                    <div class="col-lg-12 mt-4">
+                    <div class="col-lg-12 mt-4 projects-carousel-wrapper position-relative">
+                        <button type="button" class="projects-carousel-control projects-carousel-prev" aria-label="المشروع السابق">
+                            <i class="uil uil-angle-left-b"></i>
+                        </button>
+
                         <div class="tiny-three-item projects-carousel" id="projectsCarousel">
                             <div class="tiny-slide">
                                 <a href="project-asternis.html" class="project-card-link">
@@ -1029,6 +1033,10 @@
                                 </a>
                             </div>
                         </div>
+
+                        <button type="button" class="projects-carousel-control projects-carousel-next" aria-label="المشروع التالي">
+                            <i class="uil uil-angle-right-b"></i>
+                        </button>
                     </div><!--end col-->
                 </div><!--end row-->
             </div><!--end container-->
