fix projects order

--- a/index.html
+++ b/index.html
@@ -152,6 +152,115 @@
 
                         <div class="tiny-three-item projects-carousel" id="projectsCarousel">
                             <div class="tiny-slide">
+                                <a href="project-ahzojah.html" class="project-card-link">
+                                    <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
+                                        <div class="position-relative">
+                                            <img src="assets/images/p36.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع أهزوجة">
+                                            <div class="overlay rounded-top"></div>
+                                        </div>
+                                        <div class="card-body content">
+                                            <h5 class="card-title title text-dark mb-0">أهزوجة</h5>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>أمجاد باوزير / شريفه المبارك</span>
+                                                <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
+                                            </div>
+                                        </div>
+                                        <div class="author">
+                                            <small class="user d-block"><i class="uil uil-instagram"></i> @amjadesigner9 · @shr1design · @ahzojah</small>
+                                            <small class="date"><i class="uil uil-phone"></i> 0508224086 · 0558186672</small>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="tiny-slide">
+                                <a href="project-the-floral-gate.html" class="project-card-link">
+                                    <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
+                                        <div class="position-relative">
+                                            <img src="assets/images/p37.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع The Floral Gate">
+                                            <div class="overlay rounded-top"></div>
+                                        </div>
+                                        <div class="card-body content">
+                                            <h5 class="card-title title text-dark mb-0">The Floral Gate</h5>
+                                            <div class="d-flex justify-content-between alignments-center mt-3">
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>rara · Haus of Joud</span>
+                                                <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
+                                            </div>
+                                        </div>
+                                        <div class="author">
+                                            <small class="user d-block"><i class="uil uil-instagram"></i> @raraofficiial · @hausofjoud</small>
+                                            <small class="date"><i class="uil uil-external-link-alt"></i> عرض التفاصيل</small>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="tiny-slide">
+                                <a href="project-aurelle.html" class="project-card-link">
+                                    <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
+                                        <div class="position-relative">
+                                            <img src="assets/images/p24.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع Aurelle">
+                                            <div class="overlay rounded-top"></div>
+                                        </div>
+                                        <div class="card-body content">
+                                            <h5 class="card-title title text-dark mb-0">Aurelle</h5>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>ذكرى تركي</span>
+                                                <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
+                                            </div>
+                                        </div>
+                                        <div class="author">
+                                            <small class="user d-block"><i class="uil uil-instagram"></i> @thekra_turki</small>
+                                            <small class="date"><i class="uil uil-phone"></i> +966 50 845 8195</small>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="tiny-slide">
+                                <a href="project-sarmadan.html" class="project-card-link">
+                                    <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
+                                        <div class="position-relative">
+                                            <img src="assets/images/p25.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع Sarmadan">
+                                            <div class="overlay rounded-top"></div>
+                                        </div>
+                                        <div class="card-body content">
+                                            <h5 class="card-title title text-dark mb-0">Sarmadan</h5>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>الدانه بن فهيد / لجين زاحم</span>
+                                                <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
+                                            </div>
+                                        </div>
+                                        <div class="author">
+                                            <small class="user d-block"><i class="uil uil-envelope"></i> sarmadan.atelier@gmail.com</small>
+                                            <small class="date"><i class="uil uil-phone"></i> +966581933491 · +966500807279</small>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="tiny-slide">
+                                <a href="project-eclav.html" class="project-card-link">
+                                    <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
+                                        <div class="position-relative">
+                                            <img src="assets/images/p21.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع Éclav">
+                                            <div class="overlay rounded-top"></div>
+                                        </div>
+                                        <div class="card-body content">
+                                            <h5 class="card-title title text-dark mb-0">Éclav</h5>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>أثير مجرشي / ديم محمد</span>
+                                                <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
+                                            </div>
+                                        </div>
+                                        <div class="author">
+                                            <small class="user d-block"><i class="uil uil-instagram"></i> @eclav041</small>
+                                            <small class="date"><i class="uil uil-external-link-alt"></i> عرض التفاصيل</small>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="tiny-slide">
                                 <a href="project-asternis.html" class="project-card-link">
                                     <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
                                         <div class="position-relative">
