quick check for updates

--- a/project-eclav.html
+++ b/project-eclav.html
@@ -63,60 +63,52 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/ECLAV/IMG_8231.jpg" class="img-fluid" alt="تصميم Éclav 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 1</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/ECLAV/IMG_8259.jpg" class="img-fluid" alt="تصميم Éclav 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 2</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/ECLAV/IMG_8278.jpg" class="img-fluid" alt="تصميم Éclav 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 3</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/ECLAV/IMG_8294.jpg" class="img-fluid" alt="تصميم Éclav 4">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 4</a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="tiny-slide">
+                            <!-- <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/ECLAV/IMG_8315.jpg" class="img-fluid" alt="تصميم Éclav 5">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 5</a>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="tiny-slide">
+                            </div> -->
+                            <!-- <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/ECLAV/IMG_8351.jpg" class="img-fluid" alt="تصميم Éclav 6">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 6</a>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
-                                    <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
-                                    </div>
-                                </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
