--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta charset="utf-8">
         <title>سرمد - Sarmad</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="قالب صفحة هبوط احترافي يعتمد Bootstrap للحلول الرقمية واللوجستية.">
-        <meta name="keywords" content="منصة، حلول، لوجستيات، برمجيات، أعمال، شركة">
-        <meta name="author" content="Shreethemes">
-        <meta name="email" content="support@shreethemes.in">
-        <meta name="website" content="https://shreethemes.in">
+        <meta name="description" content="مجموعة خطوط مصممي الازياء 2025 - 2026">
+        <meta name="keywords" content="مجموعة سرمد">
+        <meta name="author" content="THANA">
+        <meta name="email" content="thana.abdulahlim311@outlook.sa">
+        <meta name="website" content="https://thana-abdulhalim.netlify.app/">
         <meta name="Version" content="v4.7.0">
 
         <!-- favicon -->
