fix mystic project name

--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">Mystic Circus</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>Frolika Stage</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>ريم الحبيب</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
