fix the about section text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>سرمد - Sarmad</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="مجموعة خطوط مصممي الازياء 2025 - 2026">
+        <meta name="description" content="خط مجموعات ازياء المصممين 2025 - 2026">
         <meta name="keywords" content="مجموعة سرمد">
         <meta name="author" content="THANA">
         <meta name="email" content="thana.abdulahlim311@outlook.sa">
@@ -106,7 +106,7 @@
                     <div class="col-lg-7 col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title ms-lg-4 text-md-end text-center">
                             <h6 class="text-muted text-uppercase">عن سرمد</h6>
-                            <h4 class="title mb-4">مجموعة خطوط مصممي الازياء 2025 - 2026</h4>
+                            <h4 class="title mb-4">خط مجموعات ازياء المصممين 2025 - 2026</h4>
                             <h3 class="title mb3">مجموعة سرمد</h3>
                             <p class="text-muted">سرمد منصة تعنى بتوثيق وعرض مشاريع تخرج طالبات تصميم الأزياء والنسيج، لتكون مساحة تُخلّد الإبداع وتُبرز الحرفية والهوية الفنية لكل مصممة.
 يستمد الموقع اسمه من معنى الديمومة والخلود، تجسيدًا لفكرة أن الإبداع الحقيقي لا يزول، بل يبقى أثره ممتدًا عبر الزمن.
